# tv-webhook-trader

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  TRADINGVIEW_SETUP.md  docker-compose.yml
.claude/: SESSION_LOG.md
.github/workflows/: build.yml  deploy.yml
config/: api_keys.json.example  config.json  risk_config.json  risk_config.template.json  trading_config.json
config/vnext/: config.json  risk_config.json
include/backtest/: backtester.hpp  log_parser.hpp  wf_optimizer.hpp
include/core/: alert_manager.hpp  rate_limiter.hpp  spsc_queue.hpp  state_persistence.hpp  types.hpp
include/dashboard/: dashboard_api.hpp  tf_analytics.hpp
include/exchange/: bitget_auth.hpp  bitget_rest.hpp  bitget_ws.hpp  upbit_auth.hpp  upbit_rest.hpp
include/execution/: execution_engine.hpp  live_readiness.hpp  position_manager.hpp  shadow_tracker.hpp  spot_shadow_tracker.hpp  trade_recorder.hpp
include/risk/: fee_analyzer.hpp  portfolio_risk.hpp  position_sizer.hpp  risk_manager.hpp  symbol_learner.hpp  symbol_scorer.hpp
include/webhook/: http_server.hpp  signal_types.hpp
scripts/: apply_backup_sl.py  build.sh  check_bitget.py  close_all_positions.py  daily_quality_report.py  deploy.sh  deploy_aws.sh  fix_missing_tpsl.py  hft-trader.service  preflight_check.sh  run_wf.sh  telegram-alert.service  telegram_alert.py  tv-webhook-trader.service  watchdog.sh
src/: backtest_main.cpp  main.cpp
static/: dashboard.html  learning.html  spot.html
tests/: test_portfolio_risk.cpp  test_position_sizer.cpp  test_risk_manager.cpp  test_signal_parser.cpp
